Bug 120528 - Crash when closing context menu in Data Provider dialog
Summary: Crash when closing context menu in Data Provider dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.2.0
Keywords:
Depends on:
Blocks: Data-Provider
  Show dependency treegraph
 
Reported: 2018-10-11 19:35 UTC by Mike Kaganski
Modified: 2021-03-25 01:55 UTC (History)
0 users

See Also:
Crash report or crash signature: ["sclo.dll"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2018-10-11 19:35:29 UTC
This bug was filed from the crash reporting server and is br-e1e1191b-d4ae-449c-a40e-fc0cb2e8f91e.
=========================================

STR:
1. New spreadsheet
2. Data→Data Provider...
3. Right-click on a column header in the dialog
4. Left-click in the dialog outside the context menu

-> Crash.

Happens with Version: 6.2.0.0.alpha0+ (x64)
Build ID: a6032ff5418ad66cc8fec10c636e32b124ee7864
CPU threads: 12; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); Calc: CL
Comment 1 Mike Kaganski 2018-10-11 19:43:15 UTC
https://gerrit.libreoffice.org/61691
Comment 2 Commit Notification 2018-10-11 20:58:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e6af1ef9836199724987fbe86dc49dd4401c5dfa

tdf#120528: check for empty mpMouseEvent in ScDataTableView::MouseButtonUp

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Roman Kuznetsov 2018-10-12 18:44:53 UTC
it was fixed with speed of light. thank you Mike