tdf#120528: check for empty mpMouseEvent in ScDataTableView::MouseButtonUp

The preceeding mouse button down event could happen in a different (closing)
window, like context menu.

Change-Id: I630b827fb5fe05399ca8436ea79210f4642a56d4